# newsnow-plasma5-applet

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
plasmoid/: metadata.desktop
plasmoid/contents/config/: config.qml  main.xml
plasmoid/contents/ui/: main.qml
plasmoid/contents/ui/config/: feeds.qml  general.qml
plasmoid/contents/ui/content/: ArrowImage.qml  DropTarget.qml  Feed.qml  News.qml  NewsBody.qml  NoNews.qml
plasmoid/contents/ui/js/: utils.js
